fix joltml code

--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -314,7 +314,7 @@
     "\n",
     "training_set = pd.DataFrame(datasets['bacd'])\n",
     "experiment = Experiment(training_set.iloc[:800],experiment_id='bacd')\n",
-    "y = experiment.add_models([Xgboost()]).regression(targets=pd.DataFrame(datasets['formation_energy_per_atom'][:800]), splits=[0.8,0.2]).predict(training_set.iloc[:800])"
+    "y = experiment.add_models([Xgboost()]).regression(targets=pd.DataFrame(datasets['formation_energy_per_atom'][:800]), splits=[0.8,0.2]).predict(training_set.iloc[800:])"
    ]
   },
   {
@@ -424,7 +424,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.8.10"
   },
   "orig_nbformat": 4
  },
